--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no,width=device-width,minimal-ui" /&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags --&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;title&gt;{{project.title}} {{project.version}}&lt;/title&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;title&gt;{Evolution} {1.0}&lt;/title&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;style type='text/css'&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>canvas {</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>vertical-align: middle;</span></p>
