--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>Evolution 1.0</title>
+	<title>testEvo 1.0</title>
 	<style type='text/css'>
 	/* Disable user selection to avoid strange bug in Chrome on Windows:
 	* Selecting a text outside the canvas, then clicking+draging would
@@ -197,7 +197,7 @@
 		// dmengine*.wasm is hardcoded in the built JS loader for WASM,
 		// we need to replace it here with the correct project name.
 		if (path == "dmengine.wasm" || path == "dmengine_release.wasm" || path == "dmengine_headless.wasm") {
-			path = "Evolution.wasm";
+			path = "testEvo.wasm";
 		}
 		return scriptDirectory + path;
 	};
@@ -272,7 +272,7 @@
 		}
 		else {
 			EngineLoader.stream_wasm = "false" === "true";
-			EngineLoader.load("canvas", "Evolution");
+			EngineLoader.load("canvas", "testEvo");
 			runningFromFileWarning.parentNode.removeChild(runningFromFileWarning);
 		}
 	</script>
